--- a/user-service-dev.yml
+++ b/user-service-dev.yml
@@ -5,7 +5,12 @@ sp:
 spring:
   application:
     name: user-service
-    
+  rabbitmq:
+    host: 176.135.1.189
+    port: 5672
+    username: admin
+    password: admin
+        
 server:
   port: 8101
   
