--- a/item-service-dev.yml
+++ b/item-service-dev.yml
@@ -12,7 +12,8 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka1:2001/eureka, http://eureka2:2002/eureka
+      #defaultZone: http://eureka1:2001/eureka, http://eureka2:2002/eureka
+      defaultZone: http://localhost:2001/eureka, http://localhost:2002/eureka
 
 ---
 spring:
