--- a/order-service-dev.yml
+++ b/order-service-dev.yml
@@ -14,8 +14,9 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka1:2001/eureka, http://eureka2:2002/eureka
-      
+      #defaultZone: http://eureka1:2001/eureka, http://eureka2:2002/eureka
+      defaultZone: http://localhost:2001/eureka, http://localhost:2002/eureka
+
 feign:
   hystrix:
     enabled: true
