--- a/user-service-dev.yml
+++ b/user-service-dev.yml
@@ -17,5 +17,6 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka1:2001/eureka,http://eureka2:2002/eureka
-      
+      #defaultZone: http://eureka1:2001/eureka,http://eureka2:2002/eureka
+      defaultZone: http://localhost:2001/eureka, http://localhost:2002/eureka
+
